# InterpretationStudio-DOG

./: CMakeLists.txt  README.md  old_optim_code.txt  old_propagate_code.txt  vtkError.txt
CMakeModules/: FindCGEL.cmake
src/: manifest.mf  manifest_unix-x86_64.mf  manifest_win32-x86_64.mf
src/ckehl/vtk/: AreaPickInteractor.java  InputDialog.java  LinePickInteractor.java  LineToSurfaceMap.java  ListViewUpdateInterface.java  LookUpValues.java  MousePickInteractor.java  PetrelWellLogFormatter.java  PointPickInteractor.java  PointToSurfaceMap.java  SWT_AWT_VTK_sample.java  SimpleVTKcanvas.java  SurfaceDataInterface.java  SurfaceSamplingInterface.java  WellLogCreator.java
